Alingment header, myAccount

--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -14,8 +14,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-sm-5 inputDiv">
-                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('name')}"
-                            formControlName="name" type="text" id="name" placeholder="Name" required>
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('name')}" formControlName="name" type="text" id="name" placeholder="Name" required>
                         <div class="feedback" *ngIf="isValid('name')">
                             <span *ngIf="customerForm.controls.name.errors.required">Field cannot be Empty!!!</span>
                         </div>
@@ -31,9 +30,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-sm-5 inputDiv">
-                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}"
-                            type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No."
-                            formControlName="mobile">
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}" type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No." formControlName="mobile">
                         <div *ngIf="isPresent" class="feedback">Number Already Exists!!! Please use different number
                         </div>
                         <div class="feedback mobFeedback" *ngIf="isValid('mobile')">
@@ -51,9 +48,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-sm-5 inputDiv">
-                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('amount')}"
-                            formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount"
-                            required>
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('amount')}" formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount" required>
                         <div class="feedback" *ngIf="isValid('amount')">
                             <span *ngIf="customerForm.controls.name.errors.required">Enter some money value!</span>
                         </div>
@@ -67,9 +62,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-sm-5">
-                        <select href="#" id="txnType" formControlName="txnType"
-                            class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="false" required>
+                        <select href="#" id="txnType" formControlName="txnType" class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" required>
                             <option value="" disabled selected>
                                 Select an Option
                             </option>
@@ -84,8 +77,7 @@
                 <br><br><br>
                 <div class="row">
                     <div class="col-sm-11 text-right">
-                        <button type="submit" [disabled]="!customerForm.valid"
-                            class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
+                        <button type="submit" [disabled]="!customerForm.valid" class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
                     </div>
                 </div>
             </form>
