--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="headerData.isHeader" class="container block">
+<div *ngIf="headerData.isHeader" class="container block" style="margin-left: 170px;">
     <div style="height: 50px;"></div>
-
     <div class="row">
         <div class="col-sm-2 text-right">
             <a (click)="goBack()">
