--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="router.url === '/home'"  class="container">
-    <br>
+<div *ngIf="router.url === '/home'" class="container-fluid">
+    <br> <br>
     <div *ngIf="newBalance>=0" class="id1">
         <p class="green">Balance: {{newBalance}}</p>
     </div>
