--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -6,10 +6,10 @@
                 <br><br><br>
 
                 <div class="row">
-                    <div class="col-sm-2 text-right">
+                    <div class="col-2 text-right">
                         <i class='fa fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-4">
                         <label for="name" class="d-inline label">Customer Name</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -23,10 +23,10 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-sm-2 text-right">
+                    <div class="col-2 text-right">
                         <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-4">
                         <label for="contact" class="d-inline label"> Mobile Number</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -45,8 +45,8 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-sm-2 text-right"><i class='fas fa-rupee-sign icon2 rounded-circle'></i></div>
-                    <div class="col-sm-4">
+                    <div class="col-2 text-right"><i class='fas fa-rupee-sign icon2 rounded-circle'></i></div>
+                    <div class="col-4">
                         <label for="amount" class="d-inline label"> Amount</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -61,9 +61,9 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-sm-2 text-right"><i class='fas fa-hand-holding-usd icon2 rounded-circle'></i></div>
-                    <div class="col-sm-4">
-                        <label for="txnType" class="d-inline label"> Transaction Type</label>
+                    <div class="col-2 text-right"><i class='fas fa-hand-holding-usd icon2 rounded-circle'></i></div>
+                    <div class="col-4">
+                        <label for="txnType" class="d-inline label">Transaction Type</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-sm-5">
