--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -1,32 +1,28 @@
 <div class="container-fluid">
     <div class=" row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-11">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-8 block" style="right: 25px;">
 
             <br><br><br>
             <div class="row">
-                <div class="col-sm-2"></div>
-
-                <div class="col-sm-1">
-                    <i class='fa fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
+                <div class="col-sm-1 col-1">
+                    <i class='fa fa-user icon2 mt-1 ml-3'></i>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4 col-11">
                     <label for="name" class="d-inline label">New Name</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
-                <div class="col-sm-3 inputDiv">
+                <div class="col-sm-3 col-12 inputDiv">
                     <input class="rounded w-100 inp" type="text" id="name" name="name" placeholder="Enter New Name"
                         [(ngModel)]="customerName">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-sm-2"></div>
-
-                <div class="col-sm-1">
+                <div class="col-sm-1 col-1">
                     <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4 col-11">
                     <label for="contact" class="d-inline label">New Mobile Number</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
@@ -37,10 +33,10 @@
             </div>
             <br><br><br>
             <div class="row">
-                <div class="col-6 text-center cancel">
+                <div class="col-3 text-center pt-2 cancel">
                     <a class="logo-color" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
                 </div>
-                <div class="col-sm-2 text-right">
+                <div class="col-4 btnDiv text-right">
                     <button (click)='onSubmit()' type="submit"
                         class="btn confirmBtn text-right border border-dark nav-item nav-link-edit" data-toggle="modal"
                         data-target="#successModal">Update</button>
