--- a/src/app/editmy-account/editmy-account.component.html
+++ b/src/app/editmy-account/editmy-account.component.html
@@ -1,53 +1,67 @@
-<div class="container-fluid block">
-    <div class="col-10">
-        <div class="row">
-            <div class="col-sm-6 data">
-                <label for=name class="info">Name :</label>
+<div class="container-fluid">
+    <div style="height: 50px;"></div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <label for=name class="info">Name :</label>
+                </div>
+                <div class="col-sm-6">
+                    <input id="name" [(ngModel)]="newlenderName">
+                </div>
             </div>
-            <div class="col-sm-6 data">
-                <input class="infoDetail" id="name" [(ngModel)]="newlenderName">
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <label for=shopName class="info">Shop-Name :</label>
+                </div>
+                <div class="col-sm-6">
+                    <input id="shopName" [(ngModel)]="newlenderShopName">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 data">
-                <label for=shopName class="info">Shop-Name :</label>
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <label for=phone class="info">Phone-No :</label>
+                </div>
+                <div class="col-sm-6">
+                    <input id="phone" [(ngModel)]="newlenderPhone">
+                </div>
             </div>
-            <div class="col-sm-6 data">
-                <input class="infoDetail" id="shopName" [(ngModel)]="newlenderShopName">
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <label for=lenderid class="info">Lender-Id :</label>
+                </div>
+                <div class="col-sm-6">
+                    <input disabled id="lenderid" [(ngModel)]="newlenderId">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 data">
-                <label for=phone class="info">Phone-No :</label>
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-4">
+                    <label for=lenderid class="info">Password :</label>
+                </div>
+                <div class="col-sm-6">
+                    <input disabled type="password" id="lenderid" [(ngModel)]="newpassword">
+                </div>
             </div>
-            <div class="col-sm-6 data">
-                <input class="infoDetail" id="phone" [(ngModel)]="newlenderPhone">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 data">
-                <label for=lenderid class="info">Lender-Id :</label>
-            </div>
-            <div class="col-sm-6 data">
-                <input disabled class="infoDetail" id="lenderid" [(ngModel)]="newlenderId">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 data">
-                <label for=lenderid class="info">Password :</label>
-            </div>
-            <div class="col-sm-6 data">
-                <input disabled type="password" class="infoDetail" id="lenderid" [(ngModel)]="newpassword">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 data" style="text-align: right; margin-left: -100px; margin-top: 45px;">
-                <a class="cancel" href="http://localhost:4200/myaccount">
-                    Cancel </a>
-            </div>
-            <div class="col-sm-6 data" style="text-align: right; margin-left: 30px;">
-                <button (click)="update()" class="btn confirmBtn border border-dark EditButton"><a
-                        style="text-decoration: none; color: white;"> Update </a></button>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-4 text-center">
+                    <a class="cancel mt-4" [routerLink]="['/myaccount']">
+                        Cancel </a>
+                </div>
+                <div class="col-4 text-right">
+                    <button (click)="update()" class="btn confirmBtn border border-dark"><a> Update </a></button>
+                </div>
             </div>
         </div>
     </div>
