--- a/src/app/eledger-login/eledger-login.component.css
+++ b/src/app/eledger-login/eledger-login.component.css
@@ -1,8 +1,3 @@
-.block {
-    margin-left: 190px;
-    margin-top: 57px;
-}
-
 .logo {
     float: left;
     margin-top: 20px;
@@ -13,27 +8,6 @@ img {
     height: 40px;
 }
 
-.signUpButton {
-    margin-top: 20px;
-}
-
-input {
-    text-align: center;
-    margin-left: 50px;
-    margin-top: 20px;
-    width: 270px;
-    border: 1px solid #46afec;
-}
-
-.loginButton {
-    margin-top: 15px;
-}
-
-.confirmBtn {
-    background-color: #46afec;
-    color: white;
-}
-
 .invalidInput {
     border: 1px solid red;
 }
@@ -41,7 +15,25 @@ input {
 .valid {
     display: none;
 }
+input {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(71, 71, 71);
+    transition: background-color 0.1s;
+    font-size: 17px;
+    background-color: #f1faff;
+    font-weight: 100;
+    box-shadow: none;
+    padding: 2px 10px 2px 15px;
+    height: 35px;
+    border: 1px solid #46afec;
+    border-radius: 10px;
+}
 
+input:focus {
+    outline: none;
+    background-color: white;
+    box-shadow: 1px 1px 2px 3px #8ec7e9;
+}
 .invalidEntry {
     color: red;
     position: relative;
@@ -52,21 +44,15 @@ input {
     font-size: 12px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 540px) {
     .block {
-        margin-left: 5px;
-        margin-top: 0px;
+        left: 0px;
     }
-    input {
-        text-align: center;
-        margin-left: 5px;
-        width: 270px;
-        border: 1px solid #46afec;
+
+    h2 {
+        font-size: 25px;
     }
-    .password {
-        margin-top: 0px;
-    }
-    .signUpButton {
-        margin-top: -83px;
+    .signUp {
+        padding-top: 0px;
     }
 }
