--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 
 img {
-    height: 50px;
+    height: 48px;
     width: 60px;
 }
 
@@ -12,17 +12,29 @@ img {
     text-align: right;
 }
 
-.btn-size {
+.back-btn {
     margin-top: 9px;
     color: #46afec;
     
 }
 
-.icon-size{
-    font-size: x-large;
-}
-
-.btn-size:hover {
+.back-btn:hover {
     color: #126596;
     
+}
+
+@media screen and (max-width: 540px) {
+    .back-btn {
+        font-size: 12px;
+    }
+    
+    img {
+        height: 41px;
+        width: 52px;
+    }
+
+    .logoColor {
+        font-size: 18px;
+
+    }
 }
