--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,24 +2,24 @@
     <div style="height: 50px;"></div>
 
     <div class="row">
-        <div class="col-sm-2 text-right">
+        <div class="col-2 text-right">
             <a (click)="goBack()">
-                <div class="hand btn-size"><strong>
+                <div class="hand back-btn"><strong>
                         < Back</strong>
                 </div>
             </a>
         </div>
-        <div class="col-sm-10">
+        <div class="col-10">
             <div class="row">
-                <div class="col-sm-2 img">
-                    <img class="logo" src="../../assets/image1.png" alt="logo">
+                <div class="col-2 img mr-3">
+                    <img [routerLink]="['/home']" class="logo" src="../../assets/image1.png" alt="logo">
                 </div>
-                <div *ngIf="headerData.isIcon" class="col-sm-6 item">
+                <div *ngIf="headerData.isIcon" class="col-7 item">
                     <h5 class="logoColor border border-dark rounded p-2"> <span class="val">
                             <i class='fas fa-user icon mt-1'></i>&nbsp; {{headerData.title}}</span>
                     </h5>
                 </div>
-                <div *ngIf="headerData.isIcon==false" class="col-sm-6 item">
+                <div *ngIf="headerData.isIcon==false" class="col-7 item">
                     <h5 class="logoColor border border-dark rounded p-2">
                         {{headerData.title}}
                     </h5>
