--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,3 @@
-.id1 {
-    text-align: center;
-    padding-top: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-    padding-left: 30px;
-    font-weight: bold;
-}
-
 .red {
     color: rgb(243, 71, 71);
 }
@@ -16,9 +7,7 @@
 }
 
 .id2 {
-    margin-left: 140px;
-    padding-right: 50px;
-    padding-left: 25px;
+    text-align: center;
     font-weight: bold;
     color: #46afec;
 }
@@ -60,4 +49,37 @@
 .btn-square {
     height: 40px;
     width: 50px;
+}
+
+@media screen and (max-width: 540px) {
+    img {
+        height: 30px;
+        margin-right: 3px;
+    }
+    .id2 {
+        font-size: 18px;
+        color: #46afec;
+    }
+
+    .dropdown-content {
+        font-size: 15px;
+    }
+    
+}
+
+
+@media screen and (max-width: 460px) {
+    img {
+        height: 31px;
+        margin-right: 10px;
+    }
+    .id2 {
+        font-size: 17px;
+        color: #46afec;
+    }
+
+    .dropdown-content {
+        font-size: 15px;
+    }
+    
 }
