--- a/src/app/my-account/my-account.component.css
+++ b/src/app/my-account/my-account.component.css
@@ -1,9 +1,20 @@
     .info {
         font-weight: bold;
         margin-top: 7px;
-        font-size: large;
+        font-size: 17px;
     }
 
     .data {
-        margin-top: 25px;
+        margin-top: 30px;
+    }
+
+    @media screen and (max-width: 840px) {
+        .cancel{
+            font-size: 14px;
+        }
+        
+        .info {
+            font-size: 16px;
+        }
+
     }
