--- a/src/app/home/reports/reports.component.css
+++ b/src/app/home/reports/reports.component.css
@@ -12,9 +12,11 @@ td, th {
 }
 
 table {
-	max-width: 1000px;
-	table-layout: fixed;
+	border: 1px solid #ccc;
+	border-collapse: collapse;
 	margin: auto;
+	width: 100%;
+	table-layout: fixed;
 	word-wrap: break-word;
 }
 
@@ -36,4 +38,59 @@ table {
 	size: 10px;
 	cursor: pointer;
 	margin-top: 0px;
+}
+
+div.space {
+	margin-bottom: 10px;
+}
+
+
+/* Responsive Table CSS	 */
+@media screen and (min-width: 768px) {
+	div.mobile-view-reports {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	table {
+		border: 0;
+	}
+	table caption {
+		font-size: 1.3em;
+	}
+	table thead {
+		border: none;
+		clip: rect(0 0 0 0);
+		height: 1px;
+		margin: -1px;
+		overflow: hidden;
+		padding: 0;
+		position: absolute;
+		width: 1px;
+	}
+	table tr {
+		border-bottom: 3px solid #ddd;
+		display: block;
+		margin-bottom: .625em;
+	}
+	table td {
+		border-bottom: 1px solid #ddd;
+		display: block;
+		font-size: .8em;
+		text-align: right;
+	}
+	table td::before {
+		/*
+	  * aria-label has no advantage, it won't be read inside a table
+	  content: attr(aria-label);
+	  */
+		content: attr(data-label);
+		float: left;
+		font-weight: bold;
+		text-transform: uppercase;
+	}
+	table td:last-child {
+		border-bottom: 0;
+	}
 }
